# roadmap_sh_projects

./: Cargo.toml  LICENSE  README.md
number_guess_game/: README.md
number_guess_game/src/: main.rs
task_tracker/: Cargo.toml  README.md
task_tracker/src/: lib.rs  main.rs  task.rs  tui.rs
