[package]
name = "task_tracker"
version = "0.1.0"
edition = "2021"
description = "A simple task tracker"
license = "MIT"
authors = ["Jaffrez <Jaffrez@outlook.com>"]

[[bin]]
name = "task-cli"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = "4.5.17"
crossterm = "0.28.1"
ctrlc = { version = "3.4.5", features = ["termination"] }
ratatui = { version = "0.28.1", features = ["all-widgets"] }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
